--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         const figures = [
             {
                 id: 1,
-                file: "wordcloud.jpg", 
+                file: "wordcloud.png", 
                 title: "Figure 1: Frequent N-Grams",
                 caption: "Comparison of the most frequent n-grams in the March 8th (8M) (left) and November 25th (25N) (right) datasets."
             },
@@ -167,7 +167,7 @@
             },
             {
                 id: 4,
-                file: "INSERT_FILENAME_HERE.html", 
+                file: "evolution_graph.html", 
                 title: "Figure 4: Frequency of 'Feliz' (Happy)",
                 caption: "Evolution of the normalized frequency (per 10,000 tokens) of the lemmas in tweets published on March 8 (8M) and November 25 (25N)."
             },
@@ -179,7 +179,7 @@
             },
             {
                 id: 6,
-                file: "evolution_graph.html", 
+                file: "hashtags_top25_interactive.html", 
                 title: "Figure 6: #Feminismo Evolution",
                 caption: "Evolution of the normalized hashtags (per 1000 tweets) of #Feminismo in tweets published on March 8 (8M) and November 25 (25N) between 2010 and 2022."
             },
@@ -330,3 +330,4 @@
     </script>
 </body>
 </html>
+
